	- Fix ACCESS help.
2007-05-09 - 1.0.9
	Bugfix point release. Bug(s) fixed:
	- Fix core caused by KILLs not acting fast enough and exit_client being
		called twice.
	- Rewrote NickServ identify/regain/ghost to share code and ghost to be an
		alias for regain. Also fixed the notices not being sent to the right nick.
2007-05-11 - 1.0.10
	Bugfix point release. Bug(s) fixed:
	- Fix ChanServ so that it resets topiclocked topics on burst, and also
		resets empty topics.
	- Fix DROP on unlinked nicknames and child nicknames.
	- Added missing leaveops command which doesnt deop people not on the channel
		access list.
	- Added notice about being identified when you match an entry in the access
		list.
	- Add nick + realname to NickServ info output.
	- Add a line stating which is the master of a nickname in info, if not
		infoing the master.
	- Fix a bug in the display of various unknown time elements.
	- Improve ChanServ access add help.
2007-05-14 - 1.0.11
	Bugfix point release. Bug(s) fixed:
	- Fix parting FloodServ from a channel he's not joined to
	- Fix various (some severe) memory leaks
	- Fix bug causing some channel modes to go unnoticed.
2007-05-14 - 1.0.12
	Bugfix point release.  Bug(s) fixed:
	- Fix core caused by tring to print channel name from a null struct.
	- Fix chanserv access notices to be more helpful.

2007-??-?? - 1.1.0
	Feature/Bugfix release.
	- Fix inconsistency in SQL statements used to deal with channel masters on
		access lists. (#1)
	- Rework GET_AKICKS query to not join on channel and just use the id
		directly, since that's what we use most and the name we have elsewhere
		anyway. (#5)
	- Allow NULL hostname to be specified for database{} connection to use the
		system default to the database driver. (#21)
	- Set Precedence: junk on outgoing mail. (#2)
	- Add floodserv flag to chanserv's info. (#30)
	- Removed stray tab in HELP_SET_PRIVATE_LONG. (#27)
	- Add status command to nickserv. (#3)